[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fishie.gd" type="Script" id=1]
[ext_resource path="res://FoodFinder.gd" type="Script" id=2]
[ext_resource path="res://MovementStateMachine.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 12 )

[node name="Fishie" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 32.0
margin_bottom = 16.0
color = Color( 0.682353, 0.435294, 0.435294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodFinder" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoodFinder"]
shape = SubResource( 1 )

[node name="FeedingRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeedingRange"]
position = Vector2( 20, 8 )
shape = SubResource( 2 )

[node name="Body_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 8 )
shape = SubResource( 3 )

[node name="MovementStateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="StateLabel" type="Label" parent="."]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hunger" type="Label" parent="."]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}
